--- a/src/test/resources/com/neva/gradle/osgi/bundle/minimal/build.gradle
+++ b/src/test/resources/com/neva/gradle/osgi/bundle/minimal/build.gradle
@@ -14,7 +14,7 @@ version = '1.0.0-SNAPSHOT'
 description = 'Example'
 defaultTasks = [':build']
 
-apply plugin: 'com.neva.osgi.bundle'
+apply plugin: 'com.neva.osgi.package'
 
 repositories {
     jcenter()
@@ -25,11 +25,10 @@ repositories {
 dependencies {
     compileOnly group: 'org.osgi', name: 'osgi.cmpn', version: '6.0.0'
 
-    bundle group: 'com.neva.osgi.bundle', name: 'vertx', version:'1.0.0-SNAPSHOT',ext:'bundle'
-
-    bundleCompile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    bundleRuntime group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
-    bundleRuntime 'com.neva.felix:search-webconsole-plugin:1.2.0'
+    osgiPackage group: 'com.neva.osgi.package', name: 'vertx', version:'1.0.0-SNAPSHOT'
+    osgiCompile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    osgiRuntime group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
+    osgiRuntime 'com.neva.felix:search-webconsole-plugin:1.2.0'
 }
 
 jar {
