--- a/gradle-plugin/src/test/resources/com/neva/osgi/toolkit/gradle/pkg/minimal/build.gradle
+++ b/gradle-plugin/src/test/resources/com/neva/osgi/toolkit/gradle/pkg/minimal/build.gradle
@@ -1,12 +1,5 @@
-buildscript {
-    repositories {
-        jcenter()
-        mavenLocal()
-    }
-
-    dependencies {
-        classpath 'com.neva.osgi.toolkit:gradle-plugin:1.0.0'
-    }
+plugins {
+    id 'osgi.toolkit.package'
 }
 
 group = 'com.company.app'
