--- a/gradle-plugin/src/test/resources/com/neva/osgi/toolkit/gradle/package/build.gradle
+++ b/gradle-plugin/src/test/resources/com/neva/osgi/toolkit/gradle/package/build.gradle
@@ -3,11 +3,8 @@ plugins {
 }
 
 group = 'com.company.app'
-version = '1.0.0-SNAPSHOT'
+version = '1.0.0'
 description = 'Example'
-defaultTasks = [':clean', ':build']
-
-apply plugin: 'osgi.toolkit.package'
 
 repositories {
     jcenter()
@@ -28,8 +25,8 @@ jar {
     manifest {
         attributes([
                 'Bundle-Name'    : description,
-                'Bundle-Category': 'example',
-                'Bundle-Vendor'  : 'Company'
+                'Bundle-Category': 'OSGi Toolkit',
+                'Bundle-Vendor'  : 'Neva'
         ])
     }
 }
