--- a/package-manager/build.gradle
+++ b/package-manager/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java'
     id "com.jfrog.bintray"
+    id 'osgi.toolkit.bundle'
 }
 
-description = 'OSGi Toolkit - Manager Bundle'
+description = 'OSGi Toolkit - Package Manager'
 defaultTasks = ['publishToMavenLocal']
