--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,5 @@
-description = 'OSGi Toolkit'
-defaultTasks = ['publishToMavenLocal']
+// TODO includedBuild does not exist while running from root
+task pluginBuild { dependsOn gradle.includedBuild('plugin').task('publishToMavenLocal') }
+task toolsBuild { dependsOn gradle.includedBuild('tools').task('publishToMavenLocal') }
 
-subprojects { subproject ->
-    group = 'com.neva.osgi.toolkit'
-    version = '1.0.0'
-
-    repositories {
-        jcenter()
-    }
-
-    if (subproject.plugins.hasPlugin('org.jetbrains.kotlin.jvm')) {
-        compileKotlin {
-            kotlinOptions {
-                jvmTarget = "1.8"
-            }
-        }
-        compileTestKotlin {
-            kotlinOptions {
-                jvmTarget = "1.8"
-            }
-        }
-    }
-
-    if (subproject.plugins.hasPlugin('java')) {
-        jar {
-            manifest {
-                attributes([
-                        'Implementation-Title'  : project.description,
-                        'Implementation-Version': project.version
-                ])
-            }
-        }
-    }
-}
+build.dependsOn(pluginBuild, toolsBuild)
