--- a/settings.gradle
+++ b/settings.gradle
@@ -1,28 +1,4 @@
-// Plugins configuration
+rootProject.name = 'root'
 
-pluginManagement {
-    repositories {
-        jcenter()
-    }
-    resolutionStrategy {
-        eachPlugin {
-            if (requested.id.id == 'org.jetbrains.kotlin.jvm') {
-                useModule('org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.21')
-            } else if (requested.id.id == 'com.jfrog.bintray') {
-                useModule('com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3')
-            } else if (requested.id.namespace == 'osgi.toolkit') {
-                // TODO move gradle-plugin to buildSrc (then release it from there)
-                useModule('com.neva.osgi.toolkit:gradle-plugin:1.0.0')
-            }
-        }
-    }
-}
-
-// Project structure
-
-rootProject.name = 'osgi-toolkit'
-
-include 'gradle-plugin'
-include 'package-manager'
-include 'framework-launcher'
-include 'distribution-launcher'
+includeBuild 'plugin'
+includeBuild 'tools'
