--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,15 @@
-// TODO includedBuild does not exist while running from root
-task pluginBuild { dependsOn gradle.includedBuild('plugin').task('publishToMavenLocal') }
-task toolsBuild { dependsOn gradle.includedBuild('tools').task('publishToMavenLocal') }
+plugins {
+    id 'base'
+}
 
-build.dependsOn(pluginBuild, toolsBuild)
+defaultTasks = [':build']
+
+task cleanPlugin { dependsOn gradle.includedBuild('gradle-plugin').task(':clean') }
+task buildPlugin { dependsOn gradle.includedBuild('gradle-plugin').task(':build') }
+
+task cleanTools { dependsOn gradle.includedBuild('tools').task(':clean') }
+task buildTools { dependsOn gradle.includedBuild('tools').task(':build') }
+
+clean.dependsOn(cleanPlugin, cleanTools)
+buildTools.dependsOn buildPlugin
+build.dependsOn(buildPlugin, buildTools)
