--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,7 @@
-rootProject.name = 'root'
-
 includeBuild 'plugin'
 includeBuild 'tools'
+
+System.out.println("AAA")
+
+rootProject.name = 'root'
+
