--- a/tools/package-manager/build.gradle
+++ b/tools/package-manager/build.gradle
@@ -3,6 +3,7 @@ buildscript {
 }
 
 apply plugin: 'osgi.toolkit.bundle'
+apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 
 description = 'OSGi Toolkit - Package Manager'
