--- a/common.gradle
+++ b/common.gradle
@@ -6,7 +6,7 @@ allprojects { subproject ->
         jcenter()
     }
 
-    if (subproject.plugins.hasPlugin('org.jetbrains.kotlin.jvm')) {
+    plugins.withId 'org.jetbrains.kotlin.jvm', {
         compileKotlin {
             kotlinOptions {
                 jvmTarget = "1.8"
@@ -19,7 +19,7 @@ allprojects { subproject ->
         }
     }
 
-    if (subproject.plugins.hasPlugin('java')) {
+    plugins.withId 'java', {
         afterEvaluate {
             jar {
                 manifest {
@@ -32,7 +32,7 @@ allprojects { subproject ->
         }
     }
 
-    if (subproject.plugins.hasPlugin('maven-publish')) {
+    plugins.withId 'maven-publish', {
         publishing {
             publications {
                 mavenJava(MavenPublication) {
