--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -2,7 +2,21 @@ buildscript {
     apply from: "$rootProject.projectDir/buildscript.gradle", to: buildscript
 }
 
-description = 'OSGi Toolkit - Tools'
-defaultTasks = ['publishToMavenLocal']
-
+apply plugin: 'base'
 apply from: '../common.gradle'
+
+description = 'OSGi Toolkit - Tools'
+defaultTasks = [':build']
+
+task make {
+    dependsOn([
+            ':framework-launcher:publishToMavenLocal',
+            ':distribution-launcher:publishToMavenLocal'
+    ])
+}
+
+check.dependsOn([
+        ':framework-launcher:check',
+        ':distribution-launcher:check',
+        ':package-manager:check'
+])
