--- a/tools/package-manager/build.gradle
+++ b/tools/package-manager/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     apply from: "$rootProject.projectDir/buildscript.gradle", to: buildscript
 }
 
+apply plugin: 'org.jetbrains.kotlin.jvm'
 apply plugin: 'osgi.toolkit.bundle'
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
