--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'base'
 apply from: '../common.gradle'
 
-task make { dependsOn ':gradle-plugin:publishToMavenLocal' }
-check.dependsOn(':gradle-plugin:check')
+assemble.dependsOn ':gradle-plugin:publishToMavenLocal'
+check.dependsOn ':gradle-plugin:check'
