--- a/tools/framework-launcher/build.gradle
+++ b/tools/framework-launcher/build.gradle
@@ -8,3 +8,21 @@ apply plugin: 'com.jfrog.bintray'
 
 description = 'OSGi Toolkit - Framework Launcher'
 defaultTasks = ['publishToMavenLocal']
+
+dependencies {
+    compile 'org.apache.felix:org.apache.felix.main:5.6.10'
+    compile 'org.jetbrains.kotlin:kotlin-stdlib:1.2.21'
+}
+
+jar {
+    manifest {
+        attributes([
+                'Main-Class'            : 'com.neva.osgi.toolkit.framework.launcher.Launcher',
+                'Implementation-Title'  : project.description,
+                'Implementation-Version': project.version
+        ])
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
