--- a/plugins/gradle-plugin/src/test/resources/com/neva/osgi/toolkit/gradle/instance/settings.gradle
+++ b/plugins/gradle-plugin/src/test/resources/com/neva/osgi/toolkit/gradle/instance/settings.gradle
@@ -1,1 +1,16 @@
+pluginManagement {
+    repositories {
+        mavenLocal()
+        jcenter()
+    }
+    resolutionStrategy {
+        eachPlugin {
+            if (requested.id.namespace == 'osgi.toolkit') {
+                useModule('com.neva.osgi.toolkit:gradle-plugin:1.0.0')
+            }
+        }
+    }
+}
+
 rootProject.name = 'example'
+
