--- a/tools/web-manager/build.gradle
+++ b/tools/web-manager/build.gradle
@@ -9,3 +9,21 @@ apply plugin: 'com.jfrog.bintray'
 
 description = 'OSGi Toolkit - Web Manager'
 defaultTasks = ['publishToMavenLocal']
+
+jar {
+    manifest {
+        attributes([
+                'Bundle-Name': project.description,
+                'Bundle-Category': 'osgi.toolkit',
+                'Bundle-Vendor': 'Neva Development',
+                'Bundle-SymbolicName': 'com.neva.osgi.toolkit.web.manager',
+                'Export-Package': 'com.neva.osgi.toolkit.web.manager.*',
+                'Private-Package': 'kotlin.*;-split-package:=merge-first'
+        ])
+    }
+}
+
+dependencies {
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-osgi-bundle', version: '1.2.21'
+    compile group: 'org.osgi', name: 'osgi.cmpn', version: '6.0.0'
+}
