--- a/plugins/commons/build.gradle
+++ b/plugins/commons/build.gradle
@@ -7,16 +7,17 @@ apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 
 description = 'OSGi Toolkit - Commons'
-defaultTasks = [':publishToMavenLocal']
+defaultTasks = ['publishToMavenLocal']
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.2.21"
+
     compile "org.jetbrains.kotlin:kotlin-reflect:1.2.21"
+    compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.8'
 
     compile 'org.zeroturnaround:zt-zip:1.12'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'commons-io:commons-io:2.4'
-    compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.8'
     compile 'org.reflections:reflections:0.9.9'
 }
 
