--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'base'
 apply from: '../common.gradle'
 
+description = 'OSGi Toolkit - Plugins'
+defaultTasks = [':assemble']
+
 assemble.dependsOn(
     ':commons:publishToMavenLocal',
     ':gradle-plugin:publishToMavenLocal'
