--- a/plugins/commons/build.gradle
+++ b/plugins/commons/build.gradle
@@ -13,3 +13,10 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.2.21"
 }
 
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+}
