--- a/tools/settings.gradle
+++ b/tools/settings.gradle
@@ -2,6 +2,7 @@
 
 rootProject.name = 'tools'
 
+include 'base'
 include 'web-manager'
 include 'framework-launcher'
 include 'distribution-launcher'
